--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 
 # Set here configurations for the database connection
 
-spring.datasource.url:jdbc:mysql://localhost:3306/adm_equipo
-spring.datasource.username:yonis
-spring.datasource.password:yonis
+spring.datasource.url:jdbc:mysql://localhost:3306/pmrti?zeroDateTimeBehavior=convertToNull
+spring.datasource.username:root
+spring.datasource.password:
 spring.datasource.driver:com.mysql.jdbc.Driver
 
 
