--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+                
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.2.3.Final</version>
         </dependency>
+        
     </dependencies>
 
     <build>
